--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URL=mongodb+srv://hoseina:Blackph1ll1p@cluster0.71jtf4m.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://hoseina:passworddb@cluster0.71jtf4m.mongodb.net/?retryWrites=true&w=majority
