--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "download": "^8.0.0"
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "download": "^8.0.0",
+    "react-bootstrap": "^2.6.0"
   }
 }
